# ara-hackathon

./: README.md  app.py  index.html  pyproject.toml  requirements.txt  server.py
api/: run.js
data/: research_workspace.json
demo/: sample_audio.aiff  sample_audio.txt
src/voice_research_agent/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  project_store.py  research.py  speech.py  workflows.py
tools/: memory.py  paper_parser.py  reasoning.py  research_manager.py  transcribe.py
web/: app.js  index.html  styles.css
