[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-research-agent"
version = "0.1.0"
description = "Ara-powered voice research assistant starter project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["ara-sdk"]

[project.scripts]
voice-research-agent = "voice_research_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
